# wps-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  pyproject.toml  wechat-article.md  wechat-images.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: PUBLISH.md
scripts/: dry-run-release.sh
src/wps_cli/: __init__.py  consts.py  exceptions.py  main.py
src/wps_cli/backends/: __init__.py  base.py  wps_com.py
src/wps_cli/cli/: calc.py  common.py  export.py  impress.py  pdf.py  writer.py
src/wps_cli/services/: __init__.py  calc_service.py  export_service.py  impress_service.py  pdf_service.py  session_manager.py  style_engine.py  writer_service.py
src/wps_cli/utils/: path_utils.py  platform_check.py
tests/: conftest.py
tests/test_backends/: test_wps_com.py
tests/test_cli/: test_common.py  test_main.py  test_path_errors.py
tests/test_services/: test_calc_service.py  test_export_service.py  test_pdf_service.py  test_session_manager.py
tests/test_utils/: __init__.py  test_path_utils.py
